# tto-auto-bot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: AI.py  bot.py  brain.py  config.py  debug.py  eyes.py  hands.py  image.py  logger.py  types.py
tests/: test_brain.py
