[project]
name = "tick-tack-toe auto bot"
requires-python = ">=3.10"
dependencies = [
    "mss ~= 10.2",
    "opencv-python-headless ~= 4.13",
    "numpy ~= 2.4",
    "pyautogui ~= 0.9",
    "pynput ~= 1.8",
    "python-dotenv ~= 1.2",
]

[project.optional-dependencies]
dev = ["pytest ~= 9.1"]
gui = ["PyQt5 ~= 5.15"]
